# golog

./: .gitignore  LICENSE  Makefile  README.md  TypicalBugs  curry3.sh  prgolog.cabal  run-batch.sh
golog/: Makefile  README.md  TODO  golog.cabal  prof.sh
golog-examples/: Makefile  README.md  golog-examples.cabal
golog-examples/elevator-basic/: ElevatorBasic.hs
golog-examples/elevator-reactive/: ElevatorReactive.hs
golog-examples/maze/: Maze.hs  Random.hs
golog-examples/traffic/: Car.hs  RoadMap.hs  Traffic.hs  Visualization.hs  World.hs
golog-examples/wumpus/: Wumpus.hs
golog-old/: Makefile  README.md  golog-old.cabal
golog-old/src/Golog/Old/: Tree.hs  TreeUtil.hs
golog-old/test/: GologOldTest.hs  Main.hs
golog-old/test/Golog/Old/: InterpreterTest.hs
golog/src/Golog/: Interpreter.hs  Macro.hs  Util.hs
golog/test/: GologTest.hs  LazySitTest.hs  LazySitTest2.hs  Main.hs
golog/test/Golog/: InterpreterTest.hs  MacroTest.hs
html/: fonts.css  index.html  main.css  planrecog.js  rstc.js  street.css  table.css  table.js
limited/: Makefile  limited.cabal
limited/src/: ESL.hs
limited/test/: ESLTest.hs  Main.hs
logs/: overtake-0002.log.situation  overtake-0002.log.situation2  torcs-driving-data
main/: Driver.hs  Main.hs  Maze.hs  Web.hs
plan-recog/: Makefile  README.md  TypicalMistakes  plan-recog.cabal
plan-recog/html/: index.html  table.js
plan-recog/main/: Main.hs  Web.hs
plan-recog/scripts/: entries.sh  run.sh
plan-recog/src/RSTC/: Progs.hs  obs.c
plan-recog/src/RSTC/BAT/: Base.hs  Progression.hs  Regression.hs
plan-recog/src/Util/: memo_cache.c  native_pso.c
plan-recog/test/: Main.hs
plan-recog/test/RSTC/: TheoremsTest.hs
plan-recog/test/Util/: ExtFracTest.hs  NativePSOTest.hs
scripts/: ml.py  replay.c  replay.sh  run-profiling.sh  svgjs.sh
src/: Car.hs  replay.c
src/Golog/: Interpreter.hs  Macro.hs  Util.hs
src/Golog/Old/: Interpreter.hs
src/Interpreter/: Golog.hs  Golog2.hs  Golog2Test.hs  Golog2Util.hs  Golog3.hs  GologTest.hs  Tree.hs  Tree2.hs  TreeUtil.hs
src/RSTC/: BAT.hs  Car.hs  Obs.hs  Progs.hs  Theorems.hs  obs.c  obs.h
src/RSTC/BAT/: Base.hs  Progression.hs  Regression.hs
src/TORCS/: CarControl.hs  CarState.hs  Client.hs  Driver.hs  GologDriver.hs  LUT.hs  MessageParser.hs  NullDriver.hs  OpenGL.hs  PhysicsUtil.hs  SimpleDriver.hs  lut_angle.c  lut_speed.c
src/TORCS/Golog/: Control.hs  Driver.hs  Sensors.hs  Simulation.hs  Visualization.hs
src/TORCS/Golog/BAT/: GearBox.hs  Perception.hs  Traction.hs  WarmUp.hs
src/Util/: ExtFrac.hs  Interpolation.hs  LinSearch.hs  Memo.hs  MemoCache.hs  NativePSO.hs  PSO.hs  Random.hs  memo_cache.c  native_pso.c
test/: GologOldTest.hs  GologTest.hs  Main.hs
test/Golog/: InterpreterTest.hs
test/Golog/Old/: InterpreterTest.hs
test/Interpreter/: GologTest.hs
test/RSTC/: TheoremsTest.hs
test/TORCS/: GologDriverTest.hs  SimpleDriverTest.hs
test/TORCS/Golog/: SimulationTest.hs
test/Util/: ExtFracTest.hs  InterpolationTest.hs  PSOTest.hs
torcs-agent/: Makefile  README.md  torcs-agent.cabal
torcs-agent/main/: Driver.hs
torcs-agent/scripts/: ML.hs  knn.c  perceptron.c
torcs-agent/src/TORCS/: MessageParser.hs  OpenGL.hs  PhysicsUtil.hs  SimpleDriver.hs
torcs-agent/src/TORCS/Golog/: Control.hs  Driver.hs  LUT.hs  Sensors.hs  Simulation.hs
torcs-agent/src/TORCS/Golog/BAT/: GearBox.hs  Perception.hs  Traction.hs  WarmUp.hs
torcs-agent/test/: Main.hs
