Name: prgolog
Version: 0.0
License: BSD3
Author: Christoph Schwering
Synopsis: Golog interpreter for plan recognition
Cabal-Version: >= 1.8
Build-Type: Simple

Description:
    Golog interpreter for plan recognition.

Library
    Hs-Source-Dirs:  src
    Exposed-Modules: Interpreter.Golog
                     Interpreter.Tree
                     Interpreter.TreeUtil
                     RSTC.BAT
                     RSTC.Car
                     RSTC.Obs
                     RSTC.Progs
                     RSTC.Theorems
                     Util.ExtFrac
                     Util.Interpolation
                     Util.Memo
                     Util.NativePSO
                     Util.PSO
    Other-Modules:
    C-Sources:       src/RSTC/obs.c
                     src/Util/native_pso.c
    Build-Depends:   array, base, containers>=0.5.2.1, random
    GHC-Options:     -Wall -rtsopts
    GHC-Prof-Options:-prof -auto-all

Executable Main
    Hs-Source-Dirs: main
    Main-Is:         Main.hs
    Build-Depends:   base, prgolog, bytestring, ekg>=0.3.1.3
    GHC-Options:     -Wall -rtsopts
    GHC-Prof-Options:-prof -auto-all

-- Executable Test
--     Hs-Source-Dirs:  test
--     Main-Is:         Main.hs
--     -- Type:             detailed-1.0
--     --Test-Module:      Test
--     Build-Depends:    base, QuickCheck, random, prgolog

