Name: prgolog
Version: 0.0
License: BSD3
Author: Christoph Schwering
Synopsis: Golog interpreter for plan recognition
Cabal-Version: >= 1.8
Build-Type: Simple

Description:
    Golog interpreter for plan recognition.

Library
    Hs-Source-Dirs:  src
    Exposed-Modules: Interpreter.Golog
                     Interpreter.Tree
                     Interpreter.TreeUtil
                     RSTC.BAT.Base
                     RSTC.BAT.Regression
                     RSTC.BAT.Progression
                     RSTC.Car
                     RSTC.Obs
                     RSTC.Progs
                     RSTC.Theorems
                     Util.Interpolation
                     Util.MemoCache
                     Util.NativePSO
    Other-Modules:
    C-Sources:       src/RSTC/obs.c
                     src/Util/memo_cache.c
                     src/Util/native_pso.c
    Build-Depends:   array, base, containers, random
    GHC-Options:     -Wall -O -rtsopts
    --GHC-Prof-Options:-prof -auto-all

Executable Main
    Hs-Source-Dirs:  main
    Main-Is:         Main.hs
    Build-Depends:   base, prgolog, bytestring, ekg
    GHC-Options:     -Wall -O -rtsopts
    --GHC-Prof-Options:-prof -auto-all

--Executable Test
--    Hs-Source-Dirs:  test
--    Main-Is:         Main.hs
--    -- Type:             detailed-1.0
--    --Test-Module:      Test
--    Build-Depends:    base, QuickCheck, random, prgolog

