Name: prgolog
Version: 0.0
License: BSD3
Author: Christoph Schwering
Synopsis: Golog interpreter for plan recognition
Cabal-Version: >= 1.8
Build-Type: Simple

Description:
    Golog interpreter for plan recognition.

Library
    Hs-Source-Dirs:  src
    Exposed-Modules: Golog.Interpreter
                     --Golog.Hierarchy
                     --Golog.HierarchyUtil
                     Golog.Macro
                     Golog.Util
                     Golog.Old.Interpreter
                     Golog.Old.Tree
                     Golog.Old.TreeUtil
                     RSTC.BAT.Base
                     RSTC.BAT.Regression
                     RSTC.BAT.Progression
                     RSTC.Car
                     RSTC.Obs
                     RSTC.Progs
                     RSTC.Theorems
                     TORCS.CarControl
                     TORCS.CarState
                     TORCS.Client
                     TORCS.Driver
                     TORCS.Golog.BAT.GearBox
                     TORCS.Golog.BAT.Perception
                     TORCS.Golog.BAT.Traction
                     TORCS.Golog.Control
                     TORCS.Golog.Driver
                     TORCS.Golog.Sensors
                     TORCS.Golog.Simulation
                     TORCS.Golog.Visualization
                     --TORCS.Golog.LUT
                     TORCS.MessageParser
                     TORCS.OpenGL
                     TORCS.PhysicsUtil
                     TORCS.SimpleDriver
                     Util.Interpolation
                     Util.MemoCache
                     Util.NativePSO
                     Util.Random
    Other-Modules:
    C-Sources:       src/RSTC/obs.c
                     --src/TORCS/lut_angle.c
                     --src/TORCS/lut_speed.c
                     src/Util/memo_cache.c
                     src/Util/native_pso.c
    Build-Depends:   array, base, bytestring, containers, network, GLUT, OpenGL, parsec, SafeSemaphore
    GHC-Options:     -Wall -O -rtsopts
    --GHC-Prof-Options:-prof -auto-all

-- Executable Main
--     Hs-Source-Dirs:  main
--     Main-Is:         Main.hs
--     Build-Depends:   base, prgolog, bytestring, ekg
--     GHC-Options:     -Wall -O -rtsopts
--     --GHC-Prof-Options:-prof -auto-all
-- 
-- Executable Maze
--     Hs-Source-Dirs:  main
--     Main-Is:         Maze.hs
--     Build-Depends:   base, prgolog
--     GHC-Options:     -Wall -O -rtsopts
--     --GHC-Prof-Options:-prof -auto-all
-- 
-- Executable Web
--     Hs-Source-Dirs:  main
--     Main-Is:         Web.hs
--     Build-Depends:   base, prgolog, bytestring, wai, warp, enumerator, blaze-builder, http-types
--     GHC-Options:     -Wall -O -rtsopts
--     --GHC-Prof-Options:-prof -auto-all

Executable Driver
    Hs-Source-Dirs:  main
    Main-Is:         Driver.hs
    Build-Depends:   base, prgolog
    GHC-Options:     -Wall -O -rtsopts -threaded
    --GHC-Prof-Options:-prof -auto-all

Executable Test
    Hs-Source-Dirs:  test
    Main-Is:         Main.hs
    -- Type:             detailed-1.0
    --Test-Module:      Test
    Build-Depends:    base, QuickCheck, random, prgolog

