Name: golog
Version: 3.1
License: BSD3
Author: Christoph Schwering
Synopsis: Golog interpreter
Cabal-Version: >= 1.8
Build-Type: Simple

Description:
    Interpreter for the action language Golog.
    Supports regression and progression, nondeterministic and decision-theoretic
    execution, step-by-step execution, concurrency by interleaving, real world
    effects.

Library
    Hs-Source-Dirs:  src
    Exposed-Modules: Golog.Interpreter
                     --Golog.Hierarchy
                     --Golog.HierarchyUtil
                     Golog.Macro
                     Golog.Util
    Other-Modules:
    Build-Depends:   base, containers
    GHC-Options:     -Wall -O -rtsopts
    --GHC-Prof-Options:-prof -auto-all


Test-Suite Test
    Hs-Source-Dirs: test
    Main-Is:        Main.hs
    Type:           exitcode-stdio-1.0
    Build-Depends:  base, golog, QuickCheck

